# codemate

./: .env.example  .gitignore  .replit  .replitignore  Dockerfile  FRONTEND_BACKEND_SETUP.md  PROJECT_DIRECTORY.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_TROUBLESHOOTING.md  README.md  REPLIT_DEPLOYMENT.md  env.example  main.py  pyproject.toml  replit.nix  requirements.txt  start_backend.py  start_frontend.bat  start_frontend.sh  test_railway_deployment.py
docker/: Dockerfile
docs/: design.md  setup.py
examples/: example.py  sample_pr_payload.json  test_diff_parser.py  test_github_provider.py
frontend/holo-pr-vision-main/: index.html  tailwind.config.ts
frontend/holo-pr-vision-main/src/: index.css
frontend/holo-pr-vision-main/src/components/dashboard/: Dashboard.tsx  PRCard.tsx  PRDetailView.tsx
frontend/holo-pr-vision-main/src/components/ui/: glass-card.tsx  neon-badge.tsx
frontend/holo-pr-vision-main/src/config/: api.ts
frontend/holo-pr-vision-main/src/lib/: api.ts
src/codemate/: .replit  config.py
src/codemate/analyzers/: ai_analyzer.py  base.py  lint_analyzer.py  security_analyzer.py
src/codemate/cli/: cli.py
src/codemate/diff/: parser.py
src/codemate/providers/: base.py  github.py
src/codemate/reporter/: github_reporter.py
src/codemate/scoring/: scorer.py
src/codemate/webhook/: server.py
